@@ -20,6 +20,8 @@ Revision history for Perl extension Math::Prime::Util.
 
     - Some fixes and speedups for ranged primes().
 
+    - In the PP code, use 2 MR bases for more numbers when possible.
+
 0.11  23 July 2012
     - Turn off threading tests on Cygwin, as threads on some Cygwin platforms
       give random panics (my Win7 64-bit works fine, XP 32-bit does not).
